[tool.poetry]
name = "langchain-experiment"
version = "0.1.0"
description = "A simple langchain application"
authors = ["xiaosha007 <l_weixiang@outlook.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = ">=2.5.2,<3.0.0"
langchain-openai = "^0.3.8"
fastapi = {extras = ["standard"], version = "^0.115.11"}
langchain = "^0.3.20"
langchain-community = "^0.3.19"
PyPDF2 = "^3.0.0"
python-dotenv = ">=0.21.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
