[project]
name = "langchain-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.11",
    "langchain-openai>=0.3.9",
    "langchain[openai]>=0.3.21",
    "pypdf>=5.4.0",
    "python-multipart>=0.0.20",
    "ruff>=0.11.2",
]
